buggery/tests/errors/too_many_params.bgr
default:
  other("asd")

other(A):
  $ ls
